--- a/app/Config/behat.yml
+++ b/app/Config/behat.yml
@@ -3,8 +3,7 @@ default:
     features: ../../features
   extensions:
     Behat\MinkExtension\Extension:
-      #base_url:  'http://test.localhost:8888/application-name/'
-	  base_url:  'http://test.localhost/'
+      base_url:  'http://test.localhost/'
       goutte:
         guzzle_parameters:
           request.params:
@@ -12,8 +11,8 @@ default:
       # 
       # switch disable followings if use behat/mink-selenium2-driver 
       #
-      selenium: ~
-      javascript_session: selenium
+      #selenium: ~
+      #javascript_session: selenium
       # 
       # switch enable followings if use behat/mink-selenium2-driver 
       #
