--- a/app/composer.json
+++ b/app/composer.json
@@ -23,6 +23,7 @@
        "pear/console_commandline": "@dev",
        "pear/pear_exception": "@dev",
         "sizuhiko/Bdd": "dev-master",
-        "behat/mink-goutte-driver": "*"
+        "behat/mink-goutte-driver": "*",
+        "phing/phing": "~2.8"
 	}
 }
