--- a/app/composer.json
+++ b/app/composer.json
@@ -17,13 +17,17 @@
     ],
     "require": {
         "cakephp/cakephp": "2.5.*",
-        "josegonzalez/cakephp-environments": "1.0.0"
+        "josegonzalez/cakephp-environments": "1.0.0",
+        "cakedc/migrations": "~2.3"
     },
 	"require-dev": {
        "pear/console_commandline": "@dev",
        "pear/pear_exception": "@dev",
         "sizuhiko/Bdd": "dev-master",
         "behat/mink-goutte-driver": "*",
-        "phing/phing": "~2.8"
+        "phing/phing": "~2.8",
+        "cakephp/cakephp-codesniffer": "0.1.*",
+        "phpmd/phpmd": "2.*",
+        "sebastian/phpcpd": "2.*"
 	}
 }
